--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -8,13 +9,18 @@
     <ImageView
         android:id="@+id/cover"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="25"/>
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:orientation="vertical"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:layout_weight="25">
+        
         <TextView
             android:id="@+id/songTitle"
             android:layout_width="wrap_content"
@@ -26,56 +32,66 @@
             android:layout_height="wrap_content"
             android:text="Artist"/>
     </LinearLayout>
-    
-    <SeekBar
-        android:id="@+id/mediaBar"
-        android:layout_width="match_parent"
-        android:layout_height="32dp">
-
-    </SeekBar>
-    
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        
-        <TextView
-            android:id="@+id/durationCurrent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0:00"
-            android:layout_weight="50"
-            android:layout_marginLeft="10dp"/>
-        <TextView
-            android:id="@+id/durationTotal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0:00"
-            android:layout_weight="50"
-            android:gravity="right"
-            android:layout_marginRight="10dp"/>
-    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-        <Button
-            android:id="@+id/mediaButtonBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" 
-            android:text="Back"/>
-        <Button
-            android:id="@+id/mediaButtonPlay"
-            android:layout_width="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:layout_weight="50">
+
+        <SeekBar
+            android:id="@+id/mediaBar"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:layout_marginTop="15dp">
+
+        </SeekBar>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Play"/>
-        <Button
-            android:id="@+id/mediaButtonForward"
-            android:layout_width="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/durationCurrent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0:00"
+                android:layout_weight="50"
+                android:layout_marginLeft="10dp"/>
+            <TextView
+                android:id="@+id/durationTotal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0:00"
+                android:layout_weight="50"
+                android:gravity="right"
+                android:layout_marginRight="10dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Forw"/>
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+            <Button
+                android:id="@+id/mediaButtonBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Back"/>
+            <Button
+                android:id="@+id/mediaButtonPlay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Play"/>
+            <Button
+                android:id="@+id/mediaButtonForward"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forw"/>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
