--- a/NotABadPlayer/app/src/main/res/layout/activity_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_player.xml
@@ -8,6 +8,7 @@
         android:id="@+id/player"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="15dp"
         android:orientation="horizontal"/>
 
 </android.support.constraint.ConstraintLayout>
