--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -80,12 +80,12 @@
                 android:id="@+id/mediaButtonBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Back"/>
+                android:text="Backw"/>
             <Button
                 android:id="@+id/mediaButtonPlay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Play"/>
+                android:text="Pause"/>
             <Button
                 android:id="@+id/mediaButtonForward"
                 android:layout_width="wrap_content"
