Quick player built and added

--- a/NotABadPlayer/app/src/main/res/layout/activity_main.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,7 @@
     <LinearLayout
         android:id="@+id/quickPlayer"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="10"
+        android:layout_height="wrap_content"
         android:background="@color/colorOverlayBackground"
         android:orientation="horizontal" />
 
