--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -5,12 +5,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     
-    <ImageView
-        android:id="@+id/cover"
-        android:layout_width="wrap_content"
-        android:layout_height="300dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.25"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_gravity="center_horizontal">
+        <ImageView
+            android:id="@+id/cover"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.25"/>
+    </FrameLayout>
     
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,12 +28,14 @@
             android:id="@+id/songTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"/>
+            android:text="Title"
+            android:singleLine="true"/>
         <TextView
             android:id="@+id/songArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Artist"/>
+            android:text="Artist"
+            android:singleLine="true"/>
     </LinearLayout>
 
     <LinearLayout
@@ -81,17 +87,20 @@
                 android:id="@+id/mediaButtonBack"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Backw"/>
+                android:background="@drawable/media_previous"
+                android:backgroundTint="@color/mediaButtons"/>
             <Button
                 android:id="@+id/mediaButtonPlay"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pause"/>
+                android:background="@drawable/media_play"
+                android:backgroundTint="@color/mediaButtons"/>
             <Button
                 android:id="@+id/mediaButtonForward"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Forw"/>
+                android:background="@drawable/media_next"
+                android:backgroundTint="@color/mediaButtons"/>
         </LinearLayout>
     </LinearLayout>
 
