--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -7,7 +7,7 @@
     
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="325dp"
         android:layout_gravity="center_horizontal">
         <ImageView
             android:id="@+id/cover"
@@ -29,12 +29,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
+            android:textSize="20dp"
             android:singleLine="true"/>
         <TextView
             android:id="@+id/songArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Artist"
+            android:textSize="14dp"
             android:singleLine="true"/>
     </LinearLayout>
 
