--- a/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_quick_player.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp">
+    android:layout_height="102dp">
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="3dp"
+        android:paddingTop="1dp"
         android:paddingLeft="3dp"
         android:paddingRight="3dp"
         android:gravity="bottom"
@@ -18,54 +19,56 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            
+
             <ImageView
                 android:id="@+id/cover"
                 android:layout_width="64dp"
-                android:layout_height="32dp"
-                android:scaleType="fitXY"/>
+                android:layout_height="48dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/cover_art_none"/>
+            
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="2dp"
+                android:orientation="vertical">
+                
+                <TextView
+                    android:id="@+id/labelTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:maxWidth="200dp"
+                    android:textSize="14sp"
+                    android:text="Nothing playing"
+                    android:singleLine="true"/>
+                
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/durationCurrent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:text="0:00"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:text="/"/>
+                    <TextView
+                        android:id="@+id/durationTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="12sp"
+                        android:text="0:00"
+                        android:gravity="right"/>
+                </LinearLayout>
 
-            <Space
-                android:layout_width="3dp"
-                android:layout_height="0dp"/>
-
-            <TextView
-                android:id="@+id/labelTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:maxWidth="200dp"
-                android:textSize="12sp"
-                android:text="Nothing playing"
-                android:singleLine="true"/>
-
-            <TextView
-                android:id="@+id/durationCurrent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="0:00"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="/"/>
-            <TextView
-                android:id="@+id/durationTotal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:text="0:00"
-                android:gravity="right"/>
-
+            </LinearLayout>
+            
         </LinearLayout>
-
-        <SeekBar
-            android:id="@+id/mediaBar"
-            android:layout_width="match_parent"
-            android:layout_height="32dp">
-
-        </SeekBar>
         
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -105,5 +108,14 @@
         </android.support.constraint.ConstraintLayout>
         
     </LinearLayout>
+
+    <SeekBar
+        android:id="@+id/mediaBar"
+        android:layout_width="match_parent"
+        android:layout_height="12dp"
+        android:layout_marginBottom="2dp"
+        android:clickable="false"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </SeekBar>
     
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
