--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -20,6 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:orientation="vertical"
         android:gravity="center_horizontal"
         android:layout_weight="0.25">
@@ -30,6 +32,7 @@
             android:layout_height="wrap_content"
             android:text="Title"
             android:textSize="20dp"
+            android:textStyle="bold"
             android:singleLine="true"/>
         <TextView
             android:id="@+id/songArtist"
