--- a/NotABadPlayer/app/src/main/res/layout/activity_main.xml
+++ b/NotABadPlayer/app/src/main/res/layout/activity_main.xml
@@ -10,20 +10,6 @@
     tools:context=".View.Main.MainActivity">
     
     <LinearLayout
-        android:id="@+id/quickPlayer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorOverlayBackground"
-        android:orientation="horizontal" />
-
-    <LinearLayout
-        android:id="@+id/tabLayout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="80"
-        android:orientation="horizontal"/>
-
-    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="10"
@@ -40,5 +26,19 @@
             app:itemTextColor="@drawable/bottom_navigation_item_style"/>
         
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/mainLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="80"
+        android:orientation="horizontal"/>
+
+    <LinearLayout
+        android:id="@+id/quickPlayer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorOverlayBackground"
+        android:orientation="horizontal" />
     
 </LinearLayout>
