--- a/NotABadPlayer/app/src/main/res/layout/item_album_song.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_album_song.xml
@@ -4,14 +4,19 @@
     android:layout_width="match_parent"
     android:layout_height="64dp"
     android:orientation="horizontal">
-    
-    <TextView
-        android:id="@+id/trackNum"
+
+    <LinearLayout
         android:layout_width="48dp"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:textSize="30dp"
-        android:textColor="@color/colorAlbumItemTextSub"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/trackNum"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:textSize="30dp"
+            android:textColor="@color/colorAlbumItemTextSub"/>
+    </LinearLayout>
     
     <Space
         android:layout_width="5dp"
@@ -20,7 +25,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_gravity="center_vertical">
         
         <TextView
             android:id="@+id/title"
