--- a/NotABadPlayer/app/src/main/res/values/colors.xml
+++ b/NotABadPlayer/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorTransparent">#00000000</color>
+    
     <color name="colorBackgroundPrimary">#ffffff</color>
     <color name="colorTextPrimary">#313131</color>
     
@@ -13,8 +15,7 @@
     <color name="colorAlbumTitleText">#313131</color>
     <color name="colorAlbumItemText">#313131</color>
     <color name="colorAlbumItemTextSub">#9c9696</color>
-    <color name="colorAlbumItemTextPlaying">#009b39</color>
-    <color name="colorAlbumItemTextSubPlaying">#ed851c</color>
+    <color name="colorAlbumItemPlayingBackground">#8ec1daf7</color>
     
     <color name="colorPrimaryDark">#00acd2</color>
     <color name="colorAccent">#D81B60</color>
