--- a/NotABadPlayer/app/src/main/res/layout/item_table_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/item_table_album.xml
@@ -7,15 +7,15 @@
     
     <ImageView
         android:id="@+id/cover"
-        android:layout_width="wrap_content"
+        android:layout_width="96dp"
         android:layout_height="164dp"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:scaleType="fitXY"/>
     
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
         android:lines="1"
         android:textColor="@color/colorAlbumItemText"
         android:layout_gravity="center_horizontal"/>
