--- a/NotABadPlayer/app/src/main/res/values/colors.xml
+++ b/NotABadPlayer/app/src/main/res/values/colors.xml
@@ -16,6 +16,11 @@
     <color name="colorAlbumItemText">#313131</color>
     <color name="colorAlbumItemTextSub">#9c9696</color>
     <color name="colorAlbumItemPlayingBackground">#8ec1daf7</color>
+
+    <color name="colorSearchFieldText">#313131</color>
+    <color name="colorSearchFieldHint">#6e6c6c</color>
+    <color name="colorSearchItemText">#313131</color>
+    <color name="colorSearchItemSubText">#6c6c6c</color>
     
     <color name="colorPrimaryDark">#00acd2</color>
     <color name="colorAccent">#D81B60</color>
