Polished the swipe down to hide player feature; also player screen now displays the song album title

--- a/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_player.xml
@@ -33,15 +33,19 @@
             android:id="@+id/songTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
             android:textSize="20dp"
             android:textStyle="bold"
+            android:singleLine="true"/>
+        <TextView
+            android:id="@+id/songAlbum"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
             android:singleLine="true"/>
         <TextView
             android:id="@+id/songArtist"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Artist"
             android:textSize="14dp"
             android:singleLine="true"/>
     </LinearLayout>
