--- a/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_settings.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=">Settings"
-        android:textColor="@color/colorTextPrimary"/>
-
+    
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            
+            <include layout="@layout/layout_settings_appearance"/>
+            
+            <include layout="@layout/layout_settings_keybinds"/>
+            
+            <include layout="@layout/layout_settings_about"/>
+        </LinearLayout>
+    </ScrollView>
+    
 </android.support.constraint.ConstraintLayout>
