--- a/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
+++ b/NotABadPlayer/app/src/main/res/layout/fragment_album.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -7,12 +7,9 @@
     <GridView
         android:id="@+id/albumSongs"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:minHeight="250dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_height="match_parent"
         android:numColumns="1"
         android:verticalSpacing="2dp"
         android:gravity="center"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
