--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_about.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_about.xml
@@ -24,6 +24,14 @@
         android:singleLine="true"
         android:textColor="@color/colorTextPrimary"
         android:textAlignment="center"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/about_release_date"
+        android:singleLine="true"
+        android:textColor="@color/colorTextPrimary"
+        android:textAlignment="center"/>
     
     <TextView
         android:layout_width="match_parent"
