--- a/NotABadPlayer/app/src/main/res/layout/layout_settings_appearance.xml
+++ b/NotABadPlayer/app/src/main/res/layout/layout_settings_appearance.xml
@@ -30,8 +30,48 @@
         <Space
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
-        <ListView
-            android:id="@+id/homeButtonList"
+        <Spinner
+            android:id="@+id/appearancePicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_album_sorting"
+            android:singleLine="true"
+            android:textColor="@color/colorTextPrimary"/>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/albumSortingPicker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/settings_track_sorting"
+            android:singleLine="true"
+            android:textColor="@color/colorTextPrimary"/>
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content" />
+        <Spinner
+            android:id="@+id/trackSortingPicker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
